# UserAuthDjango

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
src/: utils.py
src/accounts/: models.py  serializers.py  support.py  urls.py  views.py
src/firebase_auth/: authenticator.py  middleware.py
src/project/: settings.py  urls.py
